<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.freelance4all.activity.MainActivity">


    <item
        android:id="@+id/register"
        android:orderInCategory="100"
        android:title="@string/register"
        app:showAsAction="never" />

    <item
        android:id="@+id/login"
        android:orderInCategory="100"
        android:title="@string/login"
        app:showAsAction="never" />

    <item
        android:id="@+id/my_profile"
        android:orderInCategory="100"
        android:title="@string/my_profile"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/cart"
        android:orderInCategory="100"
        android:title="@string/cart"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/history"
        android:orderInCategory="100"
        android:title="@string/history"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        android:visible="false"
        app:showAsAction="never" />


</menu>